# kestrel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
kestrel/: __init__.py  base.py
kestrel/diffusion/: __init__.py  brownian.py  cir.py  ou.py
kestrel/jump_diffusion/: __init__.py  merton.py
kestrel/utils/: __init__.py  fisher_information.py  kestrel_result.py  warnings.py
tests/: test_brownian_process.py  test_cir_process.py  test_merton_process.py  test_ou_process.py  test_parameter_recovery.py  test_statistical_robustness.py
