[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stokestrel"
version = "0.1.0"
authors = [{ name = "April Kidd", email = "bk0851@outlook.com" }]
description = "A modern stochastic modelling library for parameter estimation and Monte Carlo simulation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = [
    "stochastic",
    "sde",
    "monte-carlo",
    "simulation",
    "ornstein-uhlenbeck",
    "brownian-motion",
    "quantitative-finance",
    "time-series",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.20", "scipy>=1.7", "pandas>=1.3", "matplotlib>=3.4"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/april-webm/kestrel"
Documentation = "https://github.com/april-webm/kestrel#readme"
Repository = "https://github.com/april-webm/kestrel"
Issues = "https://github.com/april-webm/kestrel/issues"
Changelog = "https://github.com/april-webm/kestrel/releases"
[tool.setuptools.packages.find]
where = ["."]
include = ["kestrel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
